# aggrepart

./: CMakeLists.txt  compile  cost.cc  cost.h  hrect.cc  hrect.h  main.cc  ops.cc  ops.h  partdim.cc  partdim.h  partition.cc  partition.h  placement.cc  placement.h  relation.h  setup.cc  setup.h  touch.cc  transform.cc  transform.h
engine/: fill.cc  fill.h  fill_.cu  fill_.h  run.cc  run.h  touch.cc  touch.cu  touch.h  touch_.h  wrap_cuda.cc  wrap_cuda.h
exps/: e01_hello.cc  e02_naive_solve_test.cc  e03_naive_execute.cc  e04_heuristic_test.cc  e05_tree_search.cc  engine_misc.h  misc.h  neighbor_splitter.h  problems.h  server.h
repr/: cost.h  graph.cc  graph.h  partdim.cc  partdim.h  partition.cc  partition.h  placement.cc  placement.h  relation.cc  relation.h  scalar.cc  scalar.h  touch.cc  touch.h
solve/: builder.cc  builder.h  heuristic.cc  heuristic.h  sol.cc  sol.h  tree_search.cc  tree_search.h
utils/: allocator.cc  allocator.h  hrect.cc  hrect.h  setup.cc  setup.h
